Revert "Prevent card rows from stretching"
This reverts commit dbc6997315d062bc57d1d14900b5adb496be7aee.

--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,6 @@
 }
 ha-card {
   display: grid;
-  align-content: start;
   container-type: inline-size;
   row-gap: calc(var(--st-spacing, var(--st-default-spacing)) * 4);
   -webkit-font-smoothing: var(--ha-font-smoothing, antialiased);
